--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 
   <script type="text/javascript" data-main="js/main" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
 
+  <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
